@@ -14,26 +14,26 @@ import java.util.Arrays;
 import java.util.List;
 
 public class CustomEntityAttackEffectConfig {
-    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
-    private static final Type CONFIG_TYPE = new TypeToken<List<CustomAttackEntityConfig>>() {}.getType();
-    private List<CustomAttackEntityConfig> customEntityAttackEffectConfig;
-    private final Path configPath;
+    public static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
+    public static final Type CONFIG_TYPE = new TypeToken<List<CustomAttackEntityConfig>>() {}.getType();
+    public List<CustomAttackEntityConfig> customEntityAttackEffectConfig;
+    public final Path configPath;
 
     public CustomEntityAttackEffectConfig() {
         this.configPath = FMLPaths.CONFIGDIR.get().resolve("ash_of_sin/custom_entity_attack_effect.json");
         initializeDefaultConfig();
     }
 
-    private void initializeDefaultConfig() {
+    public void initializeDefaultConfig() {
         if (!Files.exists(configPath)) {
             List<CustomAttackEntityConfig> defaultCustomAttackEntityConfig = Arrays.asList(
-                    new CustomAttackEntityConfig("iceandfire:ice_dragon", Arrays.asList(
+                    new CustomAttackEntityConfig("iceandfire:ice_dragon", List.of(
                             new CustomAttackEffectConfig("apotheosis:sundering", 99, 1)
                     )),
-                    new CustomAttackEntityConfig("iceandfire:fire_dragon", Arrays.asList(
+                    new CustomAttackEntityConfig("iceandfire:fire_dragon", List.of(
                             new CustomAttackEffectConfig("apotheosis:sundering", 99, 1)
                     )),
-                    new CustomAttackEntityConfig("iceandfire:lightning_dragon", Arrays.asList(
+                    new CustomAttackEntityConfig("iceandfire:lightning_dragon", List.of(
                             new CustomAttackEffectConfig("apotheosis:sundering", 99, 1)
                     ))
             );
